@@ -51,16 +51,25 @@
             <artifactId>junit-jupiter-engine</artifactId>
             <version>5.9.3</version>
             <scope>test</scope>
-    </dependency>
-
-        <!-- AbsoluteLayout -->
+        </dependency>
+        <dependency>
+            <groupId>org.jline</groupId>
+            <artifactId>jline</artifactId>
+            <version>3.23.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>33.2.1-jre</version> <!-- Já é a versão mais recente (2024) -->
+        </dependency>
+            <!-- AbsoluteLayout -->
         <dependency>
             <groupId>org.netbeans</groupId>
             <artifactId>org-netbeans-lib-awtextra</artifactId>
             <version>8.2</version>
         </dependency>
-    </dependencies>
-    <build>
+        </dependencies>
+<build>
         <plugins>
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
@@ -70,6 +79,8 @@
                 <argLine>
                     --add-opens jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
                     --add-opens jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED
+                    --enable-native-access=ALL-UNNAMED
+                    -XX:+IgnoreUnrecognizedVMOptions
                 </argLine>
             </configuration>
         </plugin>
